--- a/client/style.css
+++ b/client/style.css
@@ -5,7 +5,9 @@
 	transition-timing-function: ease-in-out;
 }
 .occupation_form .form-control.ng-invalid.ng-touched {
-	background-color: #fa9;
+	background-color: #f2dede;
+	color: #a94442;
+	border-color: #ebccd1;
 }
 
 .occupation_form .btn {
